# stdc

./: .gitignore  API.md  CMakeLists.txt  LICENSE  Makefile  README.md  stdc.c  stdc.h
cmake/: stdc-config.cmake.in
test/: example.c
